--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4 mx-auto mx-lg-0" style="margin-left: 25%">
+                    <div  style="margin-left: 25%" class="col-lg-3 col-md-4 col-sm-6 mb-4 mx-auto mx-lg-0">
                         <div class="officer-card">
                             <div class="officer-image">
                                 <img src="/static/images/sirdan.jpg" class="img-fluid">
