add more photos

--- a/templates/index.html
+++ b/templates/index.html
@@ -677,7 +677,38 @@
                             </div>
                         </div>
                     </div>
+                    <div class="future-image-container">
+                        <div class="image-stack">
+                            <img src="/static/images/sbopic6.jpg" alt="Future Leader 1" class="future-image active">
+                            <img src="/static/images/sbopic7.jpg" alt="Future Leader 2" class="future-image">
+                            <img src="/static/images/sbopic8.jpg" alt="Future Leader 3" class="future-image">
+                            <img src="/static/images/sbopic9.jpg" alt="Future Leader 4" class="future-image">
+                            <img src="/static/images/sbopic10.png" alt="Future Leader 5" class="future-image">
+                        </div>
+                        <div class="image-overlay">
+                            <div class="overlay-text">
+                                <h3>Your Journey Starts Here</h3>
+                                <p>Be the change you want to see</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="future-image-container">
+                        <div class="image-stack">
+                            <img src="/static/images/sbopic11.jpg" alt="Future Leader 1" class="future-image active">
+                            <img src="/static/images/sbopic12.jpg" alt="Future Leader 2" class="future-image">
+                            <img src="/static/images/sbopic13.jpg" alt="Future Leader 3" class="future-image">
+                            <img src="/static/images/sbopic14.jpg" alt="Future Leader 4" class="future-image">
+                            <img src="/static/images/sbopic15.png" alt="Future Leader 5" class="future-image">
+                        </div>
+                        <div class="image-overlay">
+                            <div class="overlay-text">
+                                <h3>Your Journey Starts Here</h3>
+                                <p>Be the change you want to see</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="col-lg-6">
                     <div class="future-content">
                         <div class="future-text-container">
