Fix logo header, fix content, finalize all code

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,21 +73,21 @@
 
                                     <span class="title-line org-title">
                                         <div class="navbar-brand-container align-items-center">
-                    <div class="logo-group">
-                        <img src="/static/images/prmsu-logo.png" alt="PRMSU" class="nav-logo">
+                                            <div class="logo-group">
+                                                <img src="/static/images/prmsu-logo.png" alt="PRMSU" class="nav-logo">
 
-                    </div>
+                                            </div>
 
-                    <div class="logo-group">
-                        <img src="/static/images/ccit-logo.png" alt="CCIT" class="nav-logo">
+                                            <div class="logo-group">
+                                                <img src="/static/images/ccit-logo.png" alt="CCIT" class="nav-logo">
 
-                    </div>
+                                            </div>
 
-                    <div class="logo-group">
-                        <img src="/static/images/sbo-logo.png" alt="Student Government" class="nav-logo">
+                                            <div class="logo-group">
+                                                <img src="/static/images/sbo-logo.png" alt="Student Government" class="nav-logo">
 
-                    </div>
-                </div>
+                                            </div>
+                                        </div>
                                     </span>
                                     <span class="title-line org-title">PRESIDENT RAMON MAGSAYSAY</span>
                                     <span class="title-line org-title ">STATE UNIVERSITY</span>
@@ -113,16 +113,6 @@
                             </p>
 
 
-                            <div class="hero-buttons">
-                                <a href="#journey" class="btn btn-primary btn-lg hero-btn primary-btn">
-                                    <i class="fas fa-rocket me-2"></i>
-                                    <span>Explore Our Journey</span>
-                                </a>
-                                <a href="#officers" class="btn btn-outline-light btn-lg hero-btn secondary-btn">
-                                    <i class="fas fa-users me-2"></i>
-                                    <span>Meet Our Team</span>
-                                </a>
-                            </div>
 
 
                         </div>
@@ -181,7 +171,6 @@
                             <div class="officer-info">
                                 <h5>Sir Dan</h5>
                                 <h6>Adviser</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -193,7 +182,6 @@
                             <div class="officer-info">
                                 <h5>Ma'am May Ann</h5>
                                 <h6>Adviser</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -207,7 +195,6 @@
                             <div class="officer-info">
                                 <h5>Joy</h5>
                                 <h6>President</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -220,7 +207,6 @@
                             <div class="officer-info">
                                 <h5>Den</h5>
                                 <h6>Vice President Internal</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -233,7 +219,6 @@
                             <div class="officer-info">
                                 <h5>JM</h5>
                                 <h6>Vice President External</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -246,7 +231,6 @@
                             <div class="officer-info">
                                 <h5>Meli</h5>
                                 <h6>Secretary</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -254,12 +238,11 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                         <div class="officer-card" data-aos="fade-up" data-aos-delay="100">
                             <div class="officer-image">
-                                <img src="/static/images/jhed.jpg" alt="Assistant Secretary" class="img-fluid">
+                                <img src="/static/images/paule.jpeg" alt="Assistant Secretary" class="img-fluid">
                             </div>
                             <div class="officer-info">
                                 <h5>Jhed</h5>
                                 <h6>Assistant Secretary</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -272,7 +255,6 @@
                             <div class="officer-info">
                                 <h5>Felix</h5>
                                 <h6>Treasurer</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -285,7 +267,6 @@
                             <div class="officer-info">
                                 <h5>Lance</h5>
                                 <h6>Assistant Treasurer</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -298,7 +279,6 @@
                             <div class="officer-info">
                                 <h5>Luofin</h5>
                                 <h6>Auditor</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -311,7 +291,6 @@
                             <div class="officer-info">
                                 <h5>Grant</h5>
                                 <h6>Assistant Auditor</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -320,12 +299,11 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                         <div class="officer-card" data-aos="fade-up" data-aos-delay="500">
                             <div class="officer-image">
-                                <img src="/static/images/gwen.jpg" class="img-fluid">
+                                <img src="/static/images/mercurio.jpg" class="img-fluid">
                             </div>
                             <div class="officer-info">
                                 <h5>Gwen</h5>
                                 <h6>P.I.O</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -337,7 +315,6 @@
                             <div class="officer-info">
                                 <h5>Lynus</h5>
                                 <h6>Business Manager</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -350,7 +327,6 @@
                             <div class="officer-info">
                                 <h5>Jonell</h5>
                                 <h6>Business Manager</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -362,7 +338,6 @@
                             <div class="officer-info">
                                 <h5>Adrian</h5>
                                 <h6>Business Manager</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -374,19 +349,17 @@
                             <div class="officer-info">
                                 <h5>Aldrine</h5>
                                 <h6>Business Manager</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                         <div class="officer-card" data-aos="fade-up" data-aos-delay="1000">
                             <div class="officer-image">
-                                <img src="/static/images/engel.jpg" class="img-fluid">
+                                <img src="/static/images/bautista.jpg" class="img-fluid">
                             </div>
                             <div class="officer-info">
                                 <h5>Engelbert</h5>
                                 <h6>Sergeant at Arms</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -398,7 +371,6 @@
                             <div class="officer-info">
                                 <h5>Donald</h5>
                                 <h6>Sergeant at Arms</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -410,7 +382,6 @@
                             <div class="officer-info">
                                 <h5>Reymar</h5>
                                 <h6>Sergeant at Arms</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -422,7 +393,6 @@
                             <div class="officer-info">
                                 <h5>James</h5>
                                 <h6>Sergeant at Arms</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -434,7 +404,6 @@
                             <div class="officer-info">
                                 <h5>Jhonas</h5>
                                 <h6>1st year Representative</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -446,7 +415,6 @@
                             <div class="officer-info">
                                 <h5>Allaine</h5>
                                 <h6>2nd year Representative</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -458,7 +426,6 @@
                             <div class="officer-info">
                                 <h5>Mary</h5>
                                 <h6>3rd year Representative</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -470,7 +437,6 @@
                             <div class="officer-info">
                                 <h5>Kheno</h5>
                                 <h6>4th year Representative</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -482,7 +448,6 @@
                             <div class="officer-info">
                                 <h5>Cielo</h5>
                                 <h6>Muse</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
@@ -495,7 +460,6 @@
                             <div class="officer-info">
                                 <h5>Jancarlo</h5>
                                 <h6>Escort</h6>
-                                <p>CCIT - Student Body Organization</p>
                             </div>
                         </div>
                     </div>
